[tool.poetry]
name = "git-metrics"
version = "0.1.0"
description = ""
authors = ["skoenig <koenig@fitanalytics.com>"]

[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"
GitPython = "^3.1.14"
matplotlib = "^3.3.4"
pandas = "^1.2.3"
pytest = "^6.2.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
